--- a/Depo/Depo/Presentation/UserStories/Others/VerifyEmailPopUp/EmailVerifiedPopUp.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/VerifyEmailPopUp/EmailVerifiedPopUp.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14865.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14819.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmailVerifiedPopUp" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmailVerifiedPopUp" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="continueButton" destination="Ys8-FY-2t9" id="z0B-jc-df8"/>
                 <outlet property="imageView" destination="Aeq-zb-enP" id="IWz-e8-hNg"/>
@@ -39,7 +40,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ys8-FY-2t9" customClass="RoundedButton" customModule="lifebox" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ys8-FY-2t9" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="50" y="124" width="146" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="GBW-Ky-eYM"/>
@@ -51,7 +52,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstItem="hrj-VD-UW1" firstAttribute="top" secondItem="Aeq-zb-enP" secondAttribute="bottom" constant="23" id="5pj-tM-fOk"/>
                         <constraint firstItem="Ys8-FY-2t9" firstAttribute="leading" secondItem="8v4-Yt-DA0" secondAttribute="leading" constant="50" id="63A-Q2-e5t"/>
@@ -65,14 +66,19 @@
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="8v4-Yt-DA0" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="0a6-8z-cVa"/>
                 <constraint firstItem="8v4-Yt-DA0" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="bW3-xh-jbV"/>
                 <constraint firstItem="8v4-Yt-DA0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="32" id="ggL-7o-Ev4"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="138" y="132"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
