--- a/Depo/Depo/Presentation/UserStories/Settings/Packages/View/Views/PaymentPopUpController/PaymentTypeView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Packages/View/Views/PaymentPopUpController/PaymentTypeView.xib
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina3_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PaymentTypeView" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PaymentTypeView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="309" height="145"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -50,7 +49,7 @@
                                 </label>
                             </subviews>
                         </stackView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Tm-me-UwG" customClass="BlueButtonWithMediumWhiteText" customModule="lifebox" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Tm-me-UwG" customClass="BlueButtonWithMediumWhiteText" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="63" width="54" height="41"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="41" id="utK-E1-Gqa"/>
@@ -63,7 +62,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstItem="R96-6s-rlq" firstAttribute="leading" secondItem="Sih-o5-1vI" secondAttribute="leading" constant="7" id="59W-u4-Y5c"/>
                         <constraint firstItem="3Tm-me-UwG" firstAttribute="leading" secondItem="Sih-o5-1vI" secondAttribute="leading" id="ND7-Jf-jMZ"/>
@@ -74,7 +73,8 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
                 <constraint firstItem="9TD-Qs-vA4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="E5W-it-6jA"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Sih-o5-1vI" secondAttribute="bottom" constant="20" id="KvH-vN-OP5"/>
@@ -87,7 +87,6 @@
                 <constraint firstItem="XHE-Zs-PmF" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="yRh-Pa-GfP"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="actionButton" destination="3Tm-me-UwG" id="5mw-Jb-baN"/>
                 <outlet property="iconImageView" destination="XHE-Zs-PmF" id="O55-HD-Juq"/>
@@ -98,4 +97,9 @@
             <point key="canvasLocation" x="42.1875" y="-301.875"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
