--- a/Depo/Depo/Presentation/UserStories/Spotify/Popups/ImportOverwritePopup/SpotifyOverwritePopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Spotify/Popups/ImportOverwritePopup/SpotifyOverwritePopup.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SpotifyOverwritePopup" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SpotifyOverwritePopup" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="actionButton" destination="Tkn-j6-nY8" id="OOQ-Nx-pOJ"/>
                 <outlet property="contentView" destination="Eku-Eg-zYp" id="91a-WT-UMo"/>
@@ -34,7 +35,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JJ8-MY-lPx">
                             <rect key="frame" x="26" y="113" width="242" height="44"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B6O-UB-2dh" customClass="InsetsButton" customModule="lifebox" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B6O-UB-2dh" customClass="InsetsButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="118" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="Tm1-sh-1nR"/>
@@ -42,7 +43,7 @@
                                     </constraints>
                                     <state key="normal" title="Button"/>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tkn-j6-nY8" customClass="InsetsButton" customModule="lifebox" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tkn-j6-nY8" customClass="InsetsButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="124" y="0.0" width="118" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="CjC-GL-ZBY"/>
@@ -51,7 +52,7 @@
                                     <state key="normal" title="Button"/>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="secondaryBackground"/>
                             <constraints>
                                 <constraint firstItem="B6O-UB-2dh" firstAttribute="top" secondItem="JJ8-MY-lPx" secondAttribute="top" id="5Is-9b-bZh"/>
                                 <constraint firstItem="Tkn-j6-nY8" firstAttribute="top" secondItem="JJ8-MY-lPx" secondAttribute="top" id="FD2-ko-0bo"/>
@@ -64,7 +65,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstItem="JJ8-MY-lPx" firstAttribute="centerX" secondItem="Eku-Eg-zYp" secondAttribute="centerX" id="0Z6-2x-q99"/>
                         <constraint firstAttribute="trailing" secondItem="NbA-Fh-4Nz" secondAttribute="trailing" constant="24" id="4N6-wt-Q2i"/>
@@ -77,13 +78,18 @@
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Eku-Eg-zYp" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="3CS-Qe-F9c"/>
                 <constraint firstItem="Eku-Eg-zYp" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="QNW-KD-31b"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="138" y="155"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
