--- a/Depo/Depo/Presentation/UserStories/Others/VerifyEmailPopUp/BaseEmailVerificationPopUp.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/VerifyEmailPopUp/BaseEmailVerificationPopUp.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -149,7 +150,7 @@
                                             </constraints>
                                         </stackView>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="secondaryBackground"/>
                                     <constraints>
                                         <constraint firstItem="j0H-Zd-eJR" firstAttribute="width" secondItem="Hse-jA-wFA" secondAttribute="width" multiplier="0.8" id="7Q7-cI-2P9"/>
                                         <constraint firstItem="Fec-bp-GF4" firstAttribute="top" secondItem="j0H-Zd-eJR" secondAttribute="bottom" constant="16" id="KTu-wg-KNq"/>
@@ -200,4 +201,9 @@
             <point key="canvasLocation" x="137.68115942028987" y="114.94565217391305"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
